Add Linear regression questions

--- a/book_source/source/_static/custom.css
+++ b/book_source/source/_static/custom.css
@@ -42,3 +42,56 @@ main.bd-content #main-content .prev-next-bottom .right-next i.fa-fw {
 .trace-snippet {
   border: none;
 }
+
+/* For question data tables */
+.tg {
+    border-collapse:collapse;
+    border-color:#93a1a1;
+    border-spacing:0;
+}
+
+.tg td {
+    background-color:#fdf6e3;
+    border-color:#93a1a1;
+    border-style:solid;
+    border-width:0px;
+    color:#002b36;
+     font-family:Arial, sans-serif;
+    font-size:14px;
+    overflow:hidden;
+    padding:10px 5px;
+    word-break:normal;
+}
+
+.tg th {
+    background-color:#657b83;
+    border-color:#93a1a1;
+    border-style:solid;
+    border-width:0px;
+    color:#fdf6e3;
+    font-family:Arial, sans-serif;
+    font-size:14px;
+    font-weight:normal;
+    overflow:hidden;
+    padding:10px 5px;
+    word-break:normal;
+}
+
+.tg .tg-2bhk {
+    background-color:#eee8d5;
+    border-color:inherit;
+    text-align:left;
+    vertical-align:top
+}
+
+.tg .tg-0pky {
+    border-color:inherit;
+    text-align:left;
+    vertical-align:top
+}
+
+/* Update Quiz styling */
+
+div.Quiz {
+    max-width: 100%;
+}
