--- a/book_source/source/_static/custom.css
+++ b/book_source/source/_static/custom.css
@@ -9,6 +9,11 @@
   }
 }
 
+/* Make all videos width 100% */
+video {
+  max-width: 100%;
+}
+
 /* Fix icon spacing in prev/next buttons. Hack to get all FontAwesome icons */
 main.bd-content #main-content .prev-next-bottom .right-next i.fa-fw {
   padding-right: 0.75rem;
